--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,14 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="es">
+
 <head>
-  <meta charset="utf-8">
-  <title>Prueba</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <meta charset="utf-8">
+    <title>MiAppAngular</title>
+    <base href="/">
 </head>
+
 <body>
-  <app-root></app-root>
+    <app-root></app-root> <!-- <-- Esto es crucial -->
 </body>
+
 </html>
